--- a/angular-cheatsheet/browser/index.html
+++ b/angular-cheatsheet/browser/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Cheatsheet</title>
-  <base href="https://souravkore.github.io/angularcheatsheet/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
